--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@slack/client": "5.0.2",
     "@slack/events-api": "^2.3.3",
     "@slack/interactive-messages": "^2.0.1",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.6.0",
     "localizify": "^2.0.0",
     "moment": "^2.29.4",
     "mysql2": "^3.9.8"
